// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScatterPlot > with Y axis min/max configuration > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with Y axis min/max configuration > should create expected props for core chart 1`] = `
{
  "config": {
    "xaxis": {
      "max": "15000000",
      "min": "5000000",
    },
    "yaxis": {
      "max": "0.55",
      "min": "0.5",
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with assign color to measures > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with assign color to measures > should create expected props for core chart 1`] = `
{
  "config": {
    "colorMapping": [
      {
        "color": {
          "type": "rgb",
          "value": {
            "b": 0,
            "g": 0,
            "r": 0,
          },
        },
        "predicate": [Function],
      },
    ],
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with axis name configuration - high > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - high > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "high",
        "visible": true,
      },
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with axis name configuration - invisible > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - invisible > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "xaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
    "yaxis": {
      "name": {
        "position": "middle",
        "visible": false,
      },
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with axis name configuration - low > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - low > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "low",
        "visible": true,
      },
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with axis name configuration - middle > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with axis name configuration - middle > should create expected props for core chart 1`] = `
{
  "config": {
    "secondary_xaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "secondary_yaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "xaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
    "yaxis": {
      "name": {
        "position": "middle",
        "visible": true,
      },
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring - custom colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring - custom palette > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom palette > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring - custom palette preferred over colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - custom palette preferred over colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring - default > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring - default > should create expected props for core chart 1`] = `
{
  "config": {},
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_city.id.cityname",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_city.id.cityname",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "state_id.statename",
          "type": "displayForm",
        },
        "localIdentifier": "a_state_id.statename",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "f_city.id.cityname",
              "type": "displayForm",
            },
            "localIdentifier": "a_f_city.id.cityname",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "state_id.statename",
              "type": "displayForm",
            },
            "localIdentifier": "a_state_id.statename",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_f_city.id.cityname",
        "a_state_id.statename",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom palette > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_city.id.cityname",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_city.id.cityname",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "state_id.statename",
          "type": "displayForm",
        },
        "localIdentifier": "a_state_id.statename",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "f_city.id.cityname",
              "type": "displayForm",
            },
            "localIdentifier": "a_f_city.id.cityname",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "state_id.statename",
              "type": "displayForm",
            },
            "localIdentifier": "a_state_id.statename",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_f_city.id.cityname",
        "a_state_id.statename",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom palette > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom palette preferred over colors > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_city.id.cityname",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_city.id.cityname",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "state_id.statename",
          "type": "displayForm",
        },
        "localIdentifier": "a_state_id.statename",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "f_city.id.cityname",
              "type": "displayForm",
            },
            "localIdentifier": "a_f_city.id.cityname",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "state_id.statename",
              "type": "displayForm",
            },
            "localIdentifier": "a_state_id.statename",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_f_city.id.cityname",
        "a_state_id.statename",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring with segmentation - custom palette preferred over colors > should create expected props for core chart 1`] = `
{
  "config": {
    "colorPalette": [
      {
        "fill": {
          "b": 73,
          "g": 49,
          "r": 195,
        },
        "guid": "01",
      },
      {
        "fill": {
          "b": 86,
          "g": 194,
          "r": 168,
        },
        "guid": "02",
      },
      {
        "fill": {
          "b": 177,
          "g": 217,
          "r": 243,
        },
        "guid": "03",
      },
      {
        "fill": {
          "b": 121,
          "g": 153,
          "r": 194,
        },
        "guid": "04",
      },
      {
        "fill": {
          "b": 34,
          "g": 37,
          "r": 162,
        },
        "guid": "05",
      },
    ],
    "colors": [
      "rgb(33, 41, 195)",
      "rgb(18, 194, 25)",
      "rgb(243, 56, 47)",
      "rgb(240, 239, 8)",
      "rgb(131, 131, 131)",
    ],
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with coloring with segmentation - default > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_city.id.cityname",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_city.id.cityname",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "state_id.statename",
          "type": "displayForm",
        },
        "localIdentifier": "a_state_id.statename",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "f_city.id.cityname",
              "type": "displayForm",
            },
            "localIdentifier": "a_f_city.id.cityname",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "state_id.statename",
              "type": "displayForm",
            },
            "localIdentifier": "a_state_id.statename",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_f_city.id.cityname",
        "a_state_id.statename",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with coloring with segmentation - default > should create expected props for core chart 1`] = `
{
  "config": {},
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with data labels - auto visibility > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - auto visibility > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": "auto",
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with data labels - default > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - default > should create expected props for core chart 1`] = `
{
  "config": {},
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with data labels - forced hidden > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced hidden > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": false,
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with data labels - forced visible > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced visible > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": true,
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with data labels - forced visible and german separators > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with data labels - forced visible and german separators > should create expected props for core chart 1`] = `
{
  "config": {
    "dataLabels": {
      "visible": true,
    },
    "separators": {
      "decimal": ",",
      "thousand": ".",
    },
  },
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with attr sorting > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [
    {
      "attributeSortItem": {
        "attributeIdentifier": "a_label.f_product.product.name",
        "direction": "desc",
      },
    },
  ],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with attr sorting > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with nulls in data > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "dt_closedate_timestamp.year",
          "type": "displayForm",
        },
        "localIdentifier": "a_dt_closedate_timestamp.year",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "displayForm",
            },
            "localIdentifier": "a_dt_closedate_timestamp.year",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_dt_closedate_timestamp.year",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures and attribute with nulls in data > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x and y axis measures, attribute and segmentation > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_city.id.cityname",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_city.id.cityname",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "state_id.statename",
          "type": "displayForm",
        },
        "localIdentifier": "a_state_id.statename",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "f_city.id.cityname",
              "type": "displayForm",
            },
            "localIdentifier": "a_f_city.id.cityname",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "state_id.statename",
              "type": "displayForm",
            },
            "localIdentifier": "a_state_id.statename",
          },
        },
      ],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_f_city.id.cityname",
        "a_state_id.statename",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "973a14c4-acb1-45fb-ba52-5d96fa02f7ba",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_973a14c4_acb1_45fb_ba52_5d96fa02f7ba",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x and y axis measures, attribute and segmentation > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x axis measure > should create expected execution definition 1`] = `
{
  "attributes": [],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x axis measure > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with x axis measure and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with x axis measure and attribute > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;

exports[`ScatterPlot > with y axis measure and attribute > should create expected execution definition 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [
    {
      "items": [],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "measure": {
            "definition": {
              "measureDefinition": {
                "item": {
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "type": "measure",
                },
              },
            },
            "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
          },
        },
      ],
      "localIdentifier": "secondary_measures",
    },
    {
      "items": [
        {
          "attribute": {
            "displayForm": {
              "identifier": "label.f_product.product.name",
              "type": "displayForm",
            },
            "localIdentifier": "a_label.f_product.product.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    {
      "items": [],
      "localIdentifier": "segment",
    },
  ],
  "dimensions": [
    {
      "itemIdentifiers": [
        "a_label.f_product.product.name",
      ],
    },
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "reference-workspace",
}
`;

exports[`ScatterPlot > with y axis measure and attribute > should create expected props for core chart 1`] = `
{
  "enableExecutionCancelling": false,
  "exportTitle": "ScatterPlot",
  "theme": undefined,
  "themeIsLoading": undefined,
  "themeStatus": "pending",
}
`;
